create publication is done

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -205,6 +205,33 @@
   "full_info": "Full information",
   "days_together": "{{count}} days with us",
   "days_together_today": "With us from today",
-  "are_you_sure_delete": "Are you sure you want to delete this publication?"
+  "are_you_sure_delete": "Are you sure you want to delete this publication?",
+  "post_title": "Post title",
+  "category": "Category",
+  "upload_media": "Upload media",
+  "add_more": "Add more",
+  "description": "Description",
+  "Enter detailed description here...": "Enter detailed description here...",
+  "continue": "Continue",
+  "required_documents": "Required documents",
+  "id_card": "ID card",
+  "id_card_description": "Upload front and back of your ID card",
+  "supporting_documents": "Supporting documents",
+  "supporting_docs_description": "Medical references, invoices, referrals, and other documents",
+  "income_statement": "Income statement",
+  "income_statement_description": "Proof of income or tax return for the last 6 months",
+  "bank_details": "Bank details",
+  "bank_details_placeholder": "Enter bank details",
+  "required_amount": "Required amount",
+  "enter_amount": "Enter amount",
+  "back": "Back",
+  "contact_info": "Contact information",
+  "contact_person": "Contact person",
+  "email": "Email",
+  "phone_number": "Phone number",
+  "submit_post": "Submit",
+  "loading": "Loading...",
+  "choose_the_category": "Please choose a category",
+  "file_upload_limit_exceeded": "You can't upload more than 5 files"
 }
   
