--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -199,6 +199,33 @@
   "full_info": "Подробные информации",
   "days_together": "{{count}} дней с нами",
   "days_together_today": "С сегодняшнего дня с нами",
-  "are_you_sure_delete": "Вы действительно хотите удалить эту публикацию?"
+  "are_you_sure_delete": "Вы действительно хотите удалить эту публикацию?",
+  "post_title": "Пост атауы",
+  "category": "Санат",
+  "upload_media": "Сурет және видео",
+  "add_more": "Қосу",
+  "description": "Сипаттама",
+  "Enter detailed description here...": "Толық сипаттаманы енгізіңіз...",
+  "continue": "Келесі",
+  "required_documents": "Қажетті құжаттар",
+  "id_card": "Жеке куәлік",
+  "id_card_description": "Жеке куәлігіңіздің екі жағының сканерін немесе фотосуретін жүктеңіз",
+  "supporting_documents": "Растайтын құжаттар",
+  "supporting_docs_description": "Медициналық анықтамалар, шот-фактуралар, жолдамалар және басқа құжаттар",
+  "income_statement": "Кірістер туралы есеп",
+  "income_statement_description": "Соңғы 6 айдағы табыс туралы анықтама немесе кіріс туралы декларация",
+  "bank_details": "Банк реквизиттері",
+  "bank_details_placeholder": "Банк реквизитін енгізіңіз",
+  "required_amount": "Қажетті сома",
+  "enter_amount": "Соманы енгізіңіз",
+  "back": "Артқа",
+  "contact_info": "Байланыс ақпараты",
+  "contact_person": "Байланыс тұлғасы",
+  "email": "Электрондық пошта",
+  "phone_number": "Телефон нөмірі",
+  "submit_post": "Жариялау",
+  "loading": "Жүктелуде...",
+  "choose_the_category": "Санатты таңдаңыз",
+  "file_upload_limit_exceeded": "Бір категорияға ең көбі 5 құжат қоса аласыз."
 }
   
