--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -232,5 +232,6 @@
   "upload_media": "Загрузите фото или видео",
   "bank_details_placeholder": "Введите банковские реквизиты",
   "phone_number": "Номер телефона",
-  "support_every_soul": "Опора для каждой души!"
+  "support_every_soul": "Опора для каждой души!",
+  "show_more": "Показать еще"
 }
