--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -239,5 +239,6 @@
   "Sports competition registration": "Sports competition registration",
   "your_post_takes_several_days": "Your post is in the process of verification. Please be understanding. This process takes about 1-3 days.",
   "return_to_main_page": "Return to main page",
-  "support_every_soul": "Support every soul"
+  "support_every_soul": "Support every soul",
+  "show_more": "Show more"
 }
