--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -235,5 +235,6 @@
   "Sports competition registration": "Спорт жарысына тіркелу",
   "your_post_takes_several_days": "Сіздің постыңыз тексеру үстінде. Түсіністікпен қарауыңызды сұраймыз. Бұл процесс шамамен 1-3 күн уақыт алады.  ",
   "return_to_main_page": "Басты бетке оралу",
-  "support_every_soul": "Әрбір жанға тірек!"
+  "support_every_soul": "Әрбір жанға тірек!",
+  "show_more": "Көбірек көрсету"
 }
