search, main, donation finished

--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -236,5 +236,17 @@
   "your_post_takes_several_days": "Сіздің постыңыз тексеру үстінде. Түсіністікпен қарауыңызды сұраймыз. Бұл процесс шамамен 1-3 күн уақыт алады.  ",
   "return_to_main_page": "Басты бетке оралу",
   "support_every_soul": "Әрбір жанға тірек!",
-  "show_more": "Көбірек көрсету"
+  "show_more": "Көбірек көрсету",
+  "donation_amount": "Қайырымдылық сомасы",
+  "support_demeu_description": "\"Demeu\" қызметтеріне қолдау көрсетіңіз\n\nБіздің қызметтерімізді ары қарай дамыту және көмекке мұқтаж жандарға қол жеткізу үшін, сізден ерікті түрде үлес қосуыңызды сұраймыз.\n\nӘрбір үлес – үлкен өзгерістерге бастама!\nРақмет сізге! 💙",
+  "payment_method": "Төлем әдісі",
+  "card_number": "Карта нөмірі",
+  "expiry": "Мерзімі",
+  "cvv": "CVV",
+  "save_card_for_future": "Болашақ қайырымдылық үшін картаны сақтаңыз",
+  "your_donation": "Сіздің көмегіңіз:",
+  "support_demeu": "\"Demeu\" қызметіне көмек:",
+  "total": "Толық көмек:",
+  "donate_now": "Көмек көрсету",
+  "loading": "Жіберілуде..."
 }
