--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -233,5 +233,17 @@
   "bank_details_placeholder": "Введите банковские реквизиты",
   "phone_number": "Номер телефона",
   "support_every_soul": "Опора для каждой души!",
-  "show_more": "Показать еще"
+  "show_more": "Показать еще",
+  "donation_amount": "Сумма пожертвования",
+  "support_demeu_description": "Поддержите сервисы \"Demeu\"\n\nЧтобы развивать наши услуги и помогать нуждающимся, мы просим вас внести добровольный вклад.\n\nКаждый вклад — это шаг к большим изменениям!\nСпасибо вам! 💙",
+  "payment_method": "Способ оплаты",
+  "card_number": "Номер карты",
+  "expiry": "Срок действия",
+  "cvv": "CVV",
+  "save_card_for_future": "Сохранить карту для будущих пожертвований",
+  "your_donation": "Ваша помощь:",
+  "support_demeu": "Помощь сервису \"Demeu\":",
+  "total": "Общая сумма:",
+  "donate_now": "Пожертвовать",
+  "loading": "Отправка..."
 }
