--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -240,5 +240,17 @@
   "your_post_takes_several_days": "Your post is in the process of verification. Please be understanding. This process takes about 1-3 days.",
   "return_to_main_page": "Return to main page",
   "support_every_soul": "Support every soul",
-  "show_more": "Show more"
+  "show_more": "Show more",
+  "donation_amount": "Donation Amount",
+  "support_demeu_description": "Support \"Demeu\" services\n\nTo further develop our services and help those in need, we kindly ask you to contribute voluntarily.\n\nEvery contribution starts great changes!\nThank you! 💙",
+  "payment_method": "Payment Method",
+  "card_number": "Card number",
+  "expiry": "Expiry",
+  "cvv": "CVV",
+  "save_card_for_future": "Save card for future donations",
+  "your_donation": "Your donation:",
+  "support_demeu": "Support for \"Demeu\":",
+  "total": "Total:",
+  "donate_now": "Donate Now",
+  "loading": "Sending..."
 }
