--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -262,5 +262,8 @@
   "support_demeu": "\"Demeu\" қызметіне көмек:",
   "total": "Толық көмек:",
   "donate_now": "Көмек көрсету",
-  "loading": "Жіберілуде..."
+  "loading": "Жіберілуде...",
+  "not_specified": "Көрсетілмеген",
+  "invalid_phone": "Телефон нөмірі дұрыс емес. Ол +7 санынан басталып, 11 таңбадан тұруы керек.",
+  "upload_hint": "Сұрағыңыз болған суретті қоса аласыз"
 }
