--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -260,5 +260,8 @@
   "support_demeu": "Помощь сервису \"Demeu\":",
   "total": "Общая сумма:",
   "donate_now": "Пожертвовать",
-  "loading": "Отправка..."
+  "loading": "Отправка...",
+  "not_specified": "Не указан",
+  "invalid_phone": "Неверный номер телефона. Он должен начинаться с +7 и содержать 11 цифр.",
+  "upload_hint": "Вы можете прикрепить изображение по вашему вопросу"
 }
