--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -276,5 +276,8 @@
   "support_demeu": "Support for \"Demeu\":",
   "total": "Total:",
   "donate_now": "Donate Now",
-  "loading": "Sending..."
+  "loading": "Sending...",
+  "not_specified": "Not specified",
+  "invalid_phone": "Invalid phone number. It must start with +7 and contain 11 digits.",
+  "upload_hint": "You can attach photos related to your question"
 }
