--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -262,5 +262,57 @@
   "support_demeu": "\"Demeu\" қызметіне көмек:",
   "total": "Толық көмек:",
   "donate_now": "Көмек көрсету",
-  "loading": "Жіберілуде..."
+  "loading": "Жіберілуде...",
+  "auth": {
+    "invalid_credentials": "Электронды пошта немесе құпиясөз қате.",
+    "account_locked": "Аккаунтыңыз бұғатталды. Кейінірек қайталап көріңіз.",
+    "email_not_verified": "Email расталмаған.",
+    "generic_error": "Бірдеңе дұрыс болмады. Қайта көріңіз.",
+    "registration_failed": "Тіркеу сәтсіз аяқталды",
+    "invalid_email": "Дұрыс электронды поштаны енгізіңіз",
+    "email_exists": "Бұл пошта бұрын тіркелген",
+    "email_send_failed": "Хат жіберілмеді. Кейінірек қайталап көріңіз.",
+    "password_reset_failed": "Құпиясөзді қалпына келтіру сілтемесін жіберу сәтсіз аяқталды",
+    "password_reset_success": "Құпиясөзді қалпына келтіру сілтемесі поштаңызға жіберілді.",
+    "user_not_found": "Бұл email арқылы қолданушы табылмады."
+  },
+  "success": "Сәтті орындалды",
+  "error": "Қате",
+  "popupMessage": "Құпия сөзді қалпына келтіру сілтемесі электронды поштаңызға жіберілді.",
+  "max_files_exceeded": "Көп дегенде {{count}} файл жүктей аласыз.",
+  "only_one_id_card": "Жеке куәлікті тек бір рет жүктеуге болады.",
+  "only_one_income_statement": "Табысы туралы анықтаманы тек бір рет жүктеуге болады.",
+  "max_supporting_documents": "Көп дегенде 5 растайтын құжат жүктей аласыз.",
+  "please_fill_all_fields_step1": "Барлық өрістерді толтырып, кемінде бір фото немесе бейне жүктеңіз.",
+  "please_fill_all_fields_step2": "Барлық қажетті құжаттарды жүктеп, төлем деректерін толтырыңыз.",
+  "Medical report showing the diagnosis": "Диагноз көрсетілген медициналық қорытынды",
+  "Bill for treatment or rehabilitation": "Емдеу немесе оңалту үшін шот",
+  "Documents confirming disability (if any)": "Мүгедектікті растайтын құжаттар (бар болса)",
+  "Certificate of lack of public funding": "Мемлекеттік қаржыландырудың жоқтығы туралы анықтама",
+  "Medical history (if necessary)": "Ауру тарихы (қажет болған жағдайда)",
+  "Certificate or Diploma of Education": "Білім туралы аттестат немесе диплом",
+  "Account of an educational institution": "Оқу орнының шоты",
+  "Documents confirming academic achievements": "Академиялық жетістіктерді растайтын құжаттар",
+  "Motivation letter": "Мотивациялық хат",
+  "Letters of recommendation (if any)": "Ұсыныс хаттар (бар болса)",
+  "Description of the environmental initiative": "Экологиялық бастаманың сипаттамасы",
+  "Required permit documents (if available)": "Қажетті рұқсат құжаттары (бар болса)",
+  "Environmental impact assessment conclusion": "Экологиялық әсерді бағалау қорытындысы",
+  "Emergency proof documents": "Төтенше жағдайды растайтын құжаттар",
+  "Police or Ministry of emergency situations report": "Жағдай туралы полиция немесе ТЖМ анықтамасы",
+  "A social service certificate confirming the need for help": "Көмекке мұқтаж екенін растайтын әлеуметтік қызметтің анықтамасы",
+  "A document confirming belonging to a socially vulnerable group": "Әлеуметтік осал топқа жататынын растайтын құжат",
+  "Certificate of marital status": "Отбасылық жағдай туралы анықтама",
+  "Plan for the use of funds for charitable purposes": "Қайырымдылық мақсатындағы қаражатты қолдану жоспары",
+  "Veterinary definition of an animal": "Жануардың ветеринарлық анықтамасы",
+  "Documents confirming the need for protection": "Қорғау қажеттілігін растайтын құжаттар",
+  "Application for animal shelter": "Жануарларды паналауға арналған өтініш",
+  "List of people who need help (if any)": "Көмекке мұқтаж адамдар тізімі (бар болса)",
+  "Documents confirming the intended use of the collected funds": "Жиналған қаражаттың мақсатты пайдаланылуын растайтын құжаттар",
+  "Description of public initiative": "Қоғамдық бастаманың сипаттамасы",
+  "Participant list and sports project description": "Қатысушылар тізімі және спорттық жоба сипаттамасы",
+  "Document confirming the need for funding to participate in a competition or event": "Жарысқа немесе іс-шараға қатысу үшін қаржыландыру қажеттілігін растайтын құжат",
+  "Certificates and diplomas confirming sports achievements": "Спорттық жетістіктерді растайтын сертификаттар мен дипломдар",
+  "main_page": "Басты бет"
+
 }
