--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -265,5 +265,8 @@
   "loading": "Жіберілуде...",
   "not_specified": "Көрсетілмеген",
   "invalid_phone": "Телефон нөмірі дұрыс емес. Ол +7 санынан басталып, 11 таңбадан тұруы керек.",
-  "upload_hint": "Сұрағыңыз болған суретті қоса аласыз"
+  "upload_hint": "Сұрағыңыз болған суретті қоса аласыз",
+  "login_first": "Алдымен аккаунтқа кіріңіз",
+  "donation_success": "✅ Қайырымдылық сәтті жіберілді!",
+  "donation_error": "❌ Қайырымдылықты жіберу сәтсіз аяқталды"
 }
