--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -263,5 +263,8 @@
   "loading": "Отправка...",
   "not_specified": "Не указан",
   "invalid_phone": "Неверный номер телефона. Он должен начинаться с +7 и содержать 11 цифр.",
-  "upload_hint": "Вы можете прикрепить изображение по вашему вопросу"
+  "upload_hint": "Вы можете прикрепить изображение по вашему вопросу",
+  "login_first": "Сначала войдите в аккаунт",
+  "donation_success": "✅ Пожертвование успешно отправлено!",
+  "donation_error": "❌ Не удалось отправить пожертвование"
 }
