--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -365,5 +365,14 @@
   },
   "login_first": "Please log in first",
   "donation_success": "✅ Donation successfully sent!",
-  "donation_error": "❌ Unable to send the donation"
+  "donation_error": "❌ Unable to send the donation",
+  "notifications": {
+    "title": "Notifications",
+    "all": "All notifications",
+    "unread": "Unread",
+    "loading": "Loading notifications...",
+    "mark_all": "Mark all as read"
+
+  }
+
 }
