--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -352,5 +352,14 @@
   },
   "login_first": "Алдымен аккаунтқа кіріңіз",
   "donation_success": "✅ Қайырымдылық сәтті жіберілді!",
-  "donation_error": "❌ Қайырымдылықты жіберу сәтсіз аяқталды"
+  "donation_error": "❌ Қайырымдылықты жіберу сәтсіз аяқталды",
+  "notifications": {
+    "title": "Хабарландырулар",
+    "all": "Барлық хабарландырулар",
+    "unread": "Жаңа хабарландырулар",
+    "loading": "Хабарландырулар жүктелуде...",
+    "mark_all": "Барлығын оқылған деп белгілеу"
+
+  }
+
 }
