--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -350,5 +350,14 @@
   },
   "login_first": "Сначала войдите в аккаунт",
   "donation_success": "✅ Пожертвование успешно отправлено!",
-  "donation_error": "❌ Не удалось отправить пожертвование"
+  "donation_error": "❌ Не удалось отправить пожертвование",
+  "notifications": {
+    "title": "Уведомления",
+    "all": "Все уведомления",
+    "unread": "Непрочитанные",
+    "loading": "Загрузка уведомлений...",
+    "mark_all": "Пометить все как прочитанные"
+
+  }
+
 }
