--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -352,5 +352,16 @@
   },
   "login_first": "Алдымен аккаунтқа кіріңіз",
   "donation_success": "✅ Қайырымдылық сәтті жіберілді!",
-  "donation_error": "❌ Қайырымдылықты жіберу сәтсіз аяқталды"
+  "donation_error": "❌ Қайырымдылықты жіберу сәтсіз аяқталды",
+  "certificates_title": "Марапаттар",
+  "certificates_status_received": "✅ Алынды",
+  "certificates_status_pending": "⏳ Шарттар орындалуда (көру)",
+  "certificates_date_label": "Жетістік күні",
+  "certificates_download": "⬇ Сертификатты жүктеу",
+  "certificates_unavailable": "⬇ Сертификат қолжетімсіз",
+  "certificates_requirements": "Шарттар:",
+  "certificates_footer": "Сертификаттар қайырымдылықтарыңыз бен қолдауларыңыз үшін берілген арнайы марапаттар",
+  "certificate": "сертификат",
+  "certificates": "Жетістіктер"
+
 }
