--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -350,5 +350,16 @@
   },
   "login_first": "Сначала войдите в аккаунт",
   "donation_success": "✅ Пожертвование успешно отправлено!",
-  "donation_error": "❌ Не удалось отправить пожертвование"
+  "donation_error": "❌ Не удалось отправить пожертвование",
+  "certificates_title": "Сертификаты",
+  "certificates_status_received": "✅ Получено",
+  "certificates_status_pending": "⏳ Условия не выполнены (показать)",
+  "certificates_date_label": "Дата достижения",
+  "certificates_download": "⬇ Скачать сертификат",
+  "certificates_unavailable": "⬇ Сертификат недоступен",
+  "certificates_requirements": "Условия:",
+  "certificates_footer": "Сертификаты выдаются за вашу благотворительность и поддержку",
+  "certificate": "сертификат",
+  "certificates": "Достижения"
+
 }
