--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -353,7 +353,6 @@
   "login_first": "Алдымен аккаунтқа кіріңіз",
   "donation_success": "✅ Қайырымдылық сәтті жіберілді!",
   "donation_error": "❌ Қайырымдылықты жіберу сәтсіз аяқталды",
-<<<<<<< HEAD
   "certificates_title": "Марапаттар",
   "certificates_status_received": "✅ Алынды",
   "certificates_status_pending": "⏳ Шарттар орындалуда (көру)",
@@ -369,8 +368,9 @@
     "all": "Барлық хабарландырулар",
     "unread": "Жаңа хабарландырулар",
     "loading": "Хабарландырулар жүктелуде...",
-    "mark_all": "Барлығын оқылған деп белгілеу"
-
+    "mark_all": "Барлығын оқылған деп белгілеу",
+    "empty": "Жаңа хабарландырулар жоқ",
+    "show_all": "Барлығын көрсету"
   }
 
 }
