--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -351,7 +351,6 @@
   "login_first": "Сначала войдите в аккаунт",
   "donation_success": "✅ Пожертвование успешно отправлено!",
   "donation_error": "❌ Не удалось отправить пожертвование",
-<<<<<<< HEAD
   "certificates_title": "Сертификаты",
   "certificates_status_received": "✅ Получено",
   "certificates_status_pending": "⏳ Условия не выполнены (показать)",
@@ -367,7 +366,8 @@
     "all": "Все уведомления",
     "unread": "Непрочитанные",
     "loading": "Загрузка уведомлений...",
-    "mark_all": "Пометить все как прочитанные"
-
+    "mark_all": "Пометить все как прочитанные",
+    "empty": "Нет новых уведомлении",
+    "show_all": "Показать все"
   }
 }
