--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -371,6 +371,27 @@
     "mark_all": "Барлығын оқылған деп белгілеу",
     "empty": "Жаңа хабарландырулар жоқ",
     "show_all": "Барлығын көрсету"
+  },
+
+  "cert": {
+    "requirement": {
+      "bronze": {
+        "1": "7 күн тіркелгеннен кейін",
+        "2": "Кем дегенде 3 қайырымдылық"
+      },
+      "silver": {
+        "1": "30 күн тіркелгеннен кейін",
+        "2": "3 пікір",
+        "3": "Кем дегенде 5 қайырымдылық",
+        "4": "Жалпы сома 30 000 тг"
+      },
+      "gold": {
+        "1": "90 күн тіркелгеннен кейін",
+        "2": "10 пікір",
+        "3": "Кем дегенде 10 қайырымдылық",
+        "4": "Жалпы сома 50 000 тг"
+      }
+    }
   }
 
 }
