--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -369,5 +369,25 @@
     "mark_all": "Пометить все как прочитанные",
     "empty": "Нет новых уведомлении",
     "show_all": "Показать все"
+  },
+  "cert": {
+    "requirement": {
+      "bronze": {
+        "1": "После 7 дней регистрации",
+        "2": "Минимум 3 пожертвования"
+      },
+      "silver": {
+        "1": "После 30 дней регистрации",
+        "2": "3 комментария",
+        "3": "Минимум 5 пожертвований",
+        "4": "Общая сумма 30 000 тг"
+      },
+      "gold": {
+        "1": "После 90 дней регистрации",
+        "2": "10 комментариев",
+        "3": "Минимум 10 пожертвований",
+        "4": "Общая сумма 50 000 тг"
+      }
+    }
   }
 }
